--- a/source/layouts/partials/_header.html.erb
+++ b/source/layouts/partials/_header.html.erb
@@ -3,7 +3,7 @@
   <%= current_link_to t('titles.projects'), 'projects' %>
   <%= current_link_to t('titles.about'), 'about' %>
 </header>
-<div id="loader" class="screen-border" style="box-shadow: inset 0px 0px 0px 17.5px <%= current_page.data.borderColor || "#C1EDF5" %>;">
+<div id="loader">
   <div class="progress-bar">
     <svg width="419px" height="110px" viewBox="0 0 419 110" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
@@ -21,4 +21,4 @@
     </svg>
   </div>
 </div>
-<div id="border" class="screen-border" style="box-shadow: inset 0px 0px 0px 17.5px <%= current_page.data.borderColor || "#C1EDF5" %>;"></div>
+<div id="border"></div>
