--- a/source/stylesheets/pages/_projects.scss
+++ b/source/stylesheets/pages/_projects.scss
@@ -1,8 +1,5 @@
 #projects {
   margin-left: 25%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   h2 {
     display: inline-block;
     font-size: 2.5em;
@@ -39,11 +36,35 @@
       padding: 1px;
       background-color: $color-secondary;
       transform: translateX(-101%);
-      transition: transform 0.6s ease-in-out;
+      transition: transform .6s ease-in-out;
     }
   }
   #oh-my-pi {
-    display: none;
+    visibility: hidden;
+    transition: visibility .1s;
+    .pi-title {
+      position: fixed;
+      font-size: 13.75em;
+      font-weight: 900;
+      font-style: italic;
+      text-transform: uppercase;
+      opacity: .15;
+      left: 50%;
+      transform: translate(-50%, -30%);
+    }
+    .pi-image {
+      position: fixed;
+      width: 25%;
+      max-width: 500px;
+    }
+    &.visible {
+      visibility: visible;
+    }
+  }
+  #projects-list {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
   }
   .project {
     display: block;
