Improve loader and some JS but still lagging

--- a/source/layouts/partials/_header.html.erb
+++ b/source/layouts/partials/_header.html.erb
@@ -15,7 +15,7 @@
             <use xlink:href="#path-1"></use>
           </mask>
           <use id="Mask" stroke="#C1EDF5" stroke-width="0.5" fill-opacity="0" fill="#FFFFFF" xlink:href="#path-1"></use>
-          <rect id="progress" class="turbolinks-progress-bar" fill="#EA4C64" mask="url(#mask-2)" x="128" y="-121" height="338"></rect>
+          <rect id="progress" fill="#EA4C64" mask="url(#mask-2)" x="128" y="-121" height="338"></rect>
         </g>
       </g>
     </svg>
