--- a/source/stylesheets/misc/_loader.scss
+++ b/source/stylesheets/misc/_loader.scss
@@ -2,8 +2,16 @@
   overflow: hidden;
 }
 #loader {
-  z-index: 1000;
   display: none;
+  z-index: 1000;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $color-background;
+  transition: all .5s;
   .progress-bar {
     position: absolute;
     top: 50%;
@@ -12,7 +20,12 @@
     #progress {
       x: 0;
       width: 0;
+      transition: width .2s;
     }
+  }
+  &.visible {
+    display: block;
+    opacity: 1;
   }
 }
 .turbolinks-progress-bar {
