Architecture for project details page

--- a/source/stylesheets/misc/_vars.scss
+++ b/source/stylesheets/misc/_vars.scss
@@ -13,3 +13,6 @@ $classicTablet: "screen and (max-width : 875px)";
 $bigTablet: "screen and (max-width : 1024px)";
 $classicScreen: "screen and (max-width : 1200px)";
 $bigScreen: "screen and (max-width : 1600px)";
+
+$ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+$ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.15, 0.86);
