--- a/source/localizable/projects.html.erb
+++ b/source/localizable/projects.html.erb
@@ -3,11 +3,26 @@ slug: projects
 ---
 <div id="oh-my-pi">
   <h1 class="pi-title"><%= t('titles.projects') %></h1>
-  <img src="#" class="pi-image" alt="Project image">
+  <svg class="pi-svg" width="366px" height="246px" viewbox="0 0 366 246" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+      <rect id="path-1" x="0" y="0" width="366" height="246"></rect>
+    </defs>
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-46.000000, -399.000000)">
+      <g transform="translate(46.000000, 399.000000)">
+        <g>
+          <mask id="mask-2" fill="white">
+            <use xlink:href="#path-1"></use>
+          </mask>
+          <image class="pi-image" mask="url(#mask-2)" x="-0.997275204" y="0" width="366.997275" height="1394" xlink:href="#"></image>
+        </g>
+        <rect id="Rectangle-Copy-2" class="pi-image-color" opacity="0.482846467" x="0" y="0" width="366" height="246"></rect>
+      </g>
+    </g>
+  </svg>
 </div>
 <ul id="projects-list">
   <% data.projects.each do |project| %>
-    <% link_to proxy_url(project.slug), class: 'project', data: {'border-color': project.color, project: project.slug} do %>
+    <% link_to proxy_url(project.slug), class: 'project', data: {'border-color': project.color, project: project.slug, 'project-image': project.cover} do %>
       <h2><%= project.name %></h2>
       <span class="show-more">
         <%= t('projects.show-more') %>
