--- a/source/templates/partials/_computer.html.erb
+++ b/source/templates/partials/_computer.html.erb
@@ -1,113 +1,98 @@
 <div class="computer">
-  <svg width="655px" height="478px" viewbox="0 0 655 478" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg id="adf1338b-c638-44c9-9dd0-93df7f9f46b1" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2148 1237.39">
     <defs>
-      <filter x="-26.9%" y="-371.2%" width="153.7%" height="842.5%" filterunits="objectBoundingBox" id="filter-1">
-        <fegaussianblur stddeviation="3.061617e-15 50" in="SourceGraphic"></fegaussianblur>
+      <filter id="e71a6e13-91a7-4c48-8db4-fd9f3d7680f9" x="-13.7" y="-110.5" width="128.3" height="140.2" name="filter-2">
+        <feOffset result="shadowOffsetOuter1" dx="7.8" dy="7.8" in="SourceAlpha"/>
+        <feGaussianBlur result="shadowBlurOuter1" stdDeviation="81.5" in="shadowOffsetOuter1"/>
+        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.06 0" in="shadowBlurOuter1"/>
       </filter>
-      <rect id="path-2" x="0" y="0" width="457.317647" height="319.191919" rx="34"></rect>
-      <filter x="-27.6%" y="-33.2%" width="155.1%" height="178.9%" filterunits="objectBoundingBox" id="filter-3">
-        <feoffset dx="0" dy="10" in="SourceAlpha" result="shadowOffsetOuter1"></feoffset>
-        <fegaussianblur stddeviation="15" in="shadowOffsetOuter1" result="shadowBlurOuter1"></fegaussianblur>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.06 0" type="matrix" in="shadowBlurOuter1" result="shadowMatrixOuter1"></fecolormatrix>
-        <feoffset dx="0" dy="10" in="SourceAlpha" result="shadowOffsetOuter2"></feoffset>
-        <fegaussianblur stddeviation="30" in="shadowOffsetOuter2" result="shadowBlurOuter2"></fegaussianblur>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.08 0" type="matrix" in="shadowBlurOuter2" result="shadowMatrixOuter2"></fecolormatrix>
-        <femorphology radius="0.5" operator="dilate" in="SourceAlpha" result="shadowSpreadOuter3"></femorphology>
-        <feoffset dx="0" dy="0" in="shadowSpreadOuter3" result="shadowOffsetOuter3"></feoffset>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.02 0" type="matrix" in="shadowOffsetOuter3" result="shadowMatrixOuter3"></fecolormatrix>
-        <femerge>
-          <femergenode in="shadowMatrixOuter1"></femergenode>
-          <femergenode in="shadowMatrixOuter2"></femergenode>
-          <femergenode in="shadowMatrixOuter3"></femergenode>
-        </femerge>
+      <linearGradient id="952164c2-8d50-4072-8fbc-1daf64a9f996" data-name="Dégradé sans nom" x1="752.65" y1="994.07" x2="753.65" y2="994.07" gradientTransform="matrix(2148, 0, 0, -12, -1616691.37, 13126.84)" gradientUnits="userSpaceOnUse">
+        <stop offset="0" stop-opacity="0.04"/>
+        <stop offset="1" stop-color="#fff" stop-opacity="0.04"/>
+      </linearGradient>
+      <filter id="cb01145d-084b-4051-a7b8-afc1075b337d" y="-94.6" width="100" height="107.1" name="filter-5">
+        <feOffset result="shadowOffsetInner1" dy="1" in="SourceAlpha"/>
+        <feComposite result="shadowInnerInner1" operator="arithmetic" k2="-1" k3="1" in="shadowOffsetInner1" in2="SourceAlpha"/>
+        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.02 0" in="shadowInnerInner1"/>
       </filter>
-      <rect id="path-4" x="0.211764706" y="0.242424242" width="420.894118" height="262.626263"></rect>
-      <rect id="path-6" x="91.0588235" y="0" width="376.376471" height="6.06060606" rx="3.03030303"></rect>
-      <filter x="-33.2%" y="-1732.5%" width="166.4%" height="4225.0%" filterunits="objectBoundingBox" id="filter-7">
-        <feoffset dx="0" dy="10" in="SourceAlpha" result="shadowOffsetOuter1"></feoffset>
-        <fegaussianblur stddeviation="15" in="shadowOffsetOuter1" result="shadowBlurOuter1"></fegaussianblur>
-        <fecomposite in="shadowBlurOuter1" in2="SourceAlpha" operator="out" result="shadowBlurOuter1"></fecomposite>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.06 0" type="matrix" in="shadowBlurOuter1" result="shadowMatrixOuter1"></fecolormatrix>
-        <feoffset dx="0" dy="10" in="SourceAlpha" result="shadowOffsetOuter2"></feoffset>
-        <fegaussianblur stddeviation="30" in="shadowOffsetOuter2" result="shadowBlurOuter2"></fegaussianblur>
-        <fecomposite in="shadowBlurOuter2" in2="SourceAlpha" operator="out" result="shadowBlurOuter2"></fecomposite>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.08 0" type="matrix" in="shadowBlurOuter2" result="shadowMatrixOuter2"></fecolormatrix>
-        <femerge>
-          <femergenode in="shadowMatrixOuter1"></femergenode>
-          <femergenode in="shadowMatrixOuter2"></femergenode>
-        </femerge>
+      <linearGradient id="45e2d6df-7e0f-4299-baf8-38080dc72e3c" data-name="Dégradé sans nom 2" x1="744.83" y1="994.07" x2="743.59" y2="994.07" gradientTransform="matrix(80, 0, 0, -12, -57419, 13126.84)" gradientUnits="userSpaceOnUse">
+        <stop offset="0"/>
+        <stop offset="1" stop-color="#fff"/>
+      </linearGradient>
+      <linearGradient id="d6b5fdf2-09db-48a0-a136-a0968d72d8fd" data-name="Dégradé sans nom 3" x1="743.59" y1="994.07" x2="744.59" y2="994.07" gradientTransform="matrix(80, 0, 0, -12, -59486.95, 13126.84)" xlink:href="#45e2d6df-7e0f-4299-baf8-38080dc72e3c"/>
+      <linearGradient id="ff74df12-f810-4f37-96f0-568d0d222681" data-name="Dégradé sans nom 4" x1="752.65" y1="968.72" x2="753.65" y2="968.72" gradientTransform="matrix(2148, 0, 0, -33.39, -1616692.1, 33656.27)" gradientUnits="userSpaceOnUse">
+        <stop offset="0" stop-opacity="0.07"/>
+        <stop offset="1" stop-color="#eaeaea" stop-opacity="0.07"/>
+        <stop offset="1" stop-color="#fff" stop-opacity="0.07"/>
+      </linearGradient>
+      <linearGradient id="1b131c43-0dea-4a3e-b634-4bb33e458dcc" data-name="Dégradé sans nom 6" x1="753.15" y1="969.22" x2="753.15" y2="968.22" gradientTransform="matrix(2148, 0, 0, -33.39, -1616692.1, 33656.27)" gradientUnits="userSpaceOnUse">
+        <stop offset="0" stop-opacity="0.07"/>
+        <stop offset="1" stop-color="#fff" stop-opacity="0.07"/>
+      </linearGradient>
+      <linearGradient id="dc83dd5d-fe7a-4f3c-96dc-f9b3dd530f96" data-name="Dégradé sans nom 7" x1="753.15" y1="969.22" x2="753.15" y2="968.22" gradientTransform="matrix(2148, 0, 0, -33.39, -1616692.1, 33656.27)" gradientUnits="userSpaceOnUse">
+        <stop offset="0" stop-color="#fff" stop-opacity="0.05"/>
+        <stop offset="1" stop-opacity="0.05"/>
+      </linearGradient>
+      <filter id="55d6f982-cfb0-43d5-b1ce-33840dcf898f" x="-0.1" y="-93.6" width="100.2" height="105.3" name="filter-13">
+        <feOffset result="shadowOffsetInner1" dy="1" in="SourceAlpha"/>
+        <feComposite result="shadowInnerInner1" operator="arithmetic" k2="-1" k3="1" in="shadowOffsetInner1" in2="SourceAlpha"/>
+        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.03 0" in="shadowInnerInner1"/>
       </filter>
-      <lineargradient x1="50%" y1="-2.48949813e-15%" x2="50%" y2="100%" id="linearGradient-8">
-        <stop stop-color="#F7F7F9" offset="0%"></stop>
-        <stop stop-color="#ECEDF0" offset="100%"></stop>
-      </lineargradient>
-      <path
-        d="M0.00115207509,0 L558.49527,0 L558.49527,2.98393517 C558.49527,2.98393517 533.390464,8.26935517 517.012917,9.44912803 C500.63537,10.6289009 441.130564,11.4384181 441.130564,11.4384181 L117.365858,11.4384181 C117.365858,11.4384181 83.7883107,12.4965967 41.483505,9.44912803 C-0.821300659,6.4016594 0.00115207509,2.98393517 0.00115207509,2.98393517 L0.00115207509,0 Z"
-        id="path-9"></path>
-      <filter x="-22.9%" y="-929.7%" width="145.8%" height="2303.8%" filterunits="objectBoundingBox" id="filter-10">
-        <feoffset dx="0" dy="10" in="SourceAlpha" result="shadowOffsetOuter1"></feoffset>
-        <fegaussianblur stddeviation="15" in="shadowOffsetOuter1" result="shadowBlurOuter1"></fegaussianblur>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.06 0" type="matrix" in="shadowBlurOuter1" result="shadowMatrixOuter1"></fecolormatrix>
-        <feoffset dx="0" dy="10" in="SourceAlpha" result="shadowOffsetOuter2"></feoffset>
-        <fegaussianblur stddeviation="30" in="shadowOffsetOuter2" result="shadowBlurOuter2"></fegaussianblur>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.08 0" type="matrix" in="shadowBlurOuter2" result="shadowMatrixOuter2"></fecolormatrix>
-        <femorphology radius="0.5" operator="dilate" in="SourceAlpha" result="shadowSpreadOuter3"></femorphology>
-        <feoffset dx="0" dy="0" in="shadowSpreadOuter3" result="shadowOffsetOuter3"></feoffset>
-        <fegaussianblur stddeviation="1" in="shadowOffsetOuter3" result="shadowBlurOuter3"></fegaussianblur>
-        <fecolormatrix values="0 0 0 0 0.203921569   0 0 0 0 0.247058824   0 0 0 0 0.294117647  0 0 0 0.02 0" type="matrix" in="shadowBlurOuter3" result="shadowMatrixOuter3"></fecolormatrix>
-        <femerge>
-          <femergenode in="shadowMatrixOuter1"></femergenode>
-          <femergenode in="shadowMatrixOuter2"></femergenode>
-          <femergenode in="shadowMatrixOuter3"></femergenode>
-        </femerge>
-      </filter>
-      <lineargradient x1="100%" y1="50%" x2="0%" y2="50%" id="linearGradient-11">
-        <stop stop-color="#EFF0F2" offset="0%"></stop>
-        <stop stop-color="#FFFFFF" offset="32.1657577%"></stop>
-        <stop stop-color="#FFFFFF" offset="66.3472877%"></stop>
-        <stop stop-color="#ECEDF0" offset="100%"></stop>
-      </lineargradient>
-      <path
-        d="M225.623529,0 L332.870588,0 L332.870588,3.28282828 C332.870588,3.28282828 331.901249,4.1370637 317.694118,4.29292929 C303.486987,4.44879489 255.007001,4.46018919 240.8,4.29292929 C226.592999,4.1256694 225.623529,3.03030303 225.623529,3.03030303 L225.623529,0 Z"
-        id="path-12"></path>
-    </defs>
-    <g id="Desktop-Copy-3" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-154.000000, -338.000000)">
-      <g id="mockuo" transform="translate(203.000000, 387.000000)">
-        <g id="MacBook-&amp;-iPhone">
-          <g id="MacBook">
-            <polygon id="shadow" fill-opacity="0.06" fill="#343F4B" filter="url(#filter-1)" points="0 309.59596 558.494118 309.59596 421.905882 350 136.588235 350"></polygon>
-            <g id="display" transform="translate(50.588235, 0.000000)">
-              <g id="display-panel">
-                <use fill="black" fill-opacity="1" filter="url(#filter-3)" xlink:href="#path-2"></use>
-                <use fill="#FDFEFF" fill-rule="evenodd" xlink:href="#path-2"></use>
-              </g>
-              <g id="HOME-Copy-meums" transform="translate(18.000000, 24.000000)">
-                <% if mask %>
-                  <mask id="mask-5" fill="white">
-                    <use xlink:href="#path-4"></use>
-                  </mask>
-                  <use id="Mask" fill="#ECEDF0" xlink:href="#path-4"></use>
-                <% end %>
-                <image xlink:href="<%= project_image_url(project, image) %>" <%= "mask=url(#mask-5)" if mask %> x="0.411764706" y="0" width="421" height="814.80622"></image>
-              </g>
+      <linearGradient id="0347f2e9-aa93-4a31-83dd-17fa4a18e4ef" data-name="Dégradé sans nom 8" x1="734.18" y1="984.18" x2="735.18" y2="984.18" gradientTransform="matrix(40, 0, 0, -16, -28499.14, 17037.76)" xlink:href="#45e2d6df-7e0f-4299-baf8-38080dc72e3c"/>
+      <linearGradient id="48a5c464-8edd-45c4-9ce5-a29ab784ca76" data-name="Dégradé sans nom 9" x1="735.17" y1="984.18" x2="734.17" y2="984.18" gradientTransform="matrix(40, 0, 0, -16, -28127.82, 17037.76)" xlink:href="#45e2d6df-7e0f-4299-baf8-38080dc72e3c"/>
+      <% if mask %>
+        <mask id="e5f414aa-2dc3-4e7e-beb9-c2665256ed3c" x="264" y="79" width="1618" height="1010" maskUnits="userSpaceOnUse">
+          <g transform="translate(0 -91)">
+            <g id="5c9c027a-7ae5-4592-a798-6d4ba66f4659" data-name="mask-16">
+              <rect id="b88cc6a8-61b0-4014-b1dc-ffc15d65cac1" data-name="path-15" x="264" y="170" width="1618" height="1010" fill="#fff"/>
             </g>
-            <g id="panel" transform="translate(0.000000, 309.595960)">
-              <g id="shadow">
-                <use fill="black" fill-opacity="1" filter="url(#filter-7)" xlink:href="#path-6"></use>
-                <use fill-opacity="0" fill="#FFFFFF" fill-rule="evenodd" xlink:href="#path-6"></use>
-              </g>
-              <g>
-                <use fill="black" fill-opacity="1" filter="url(#filter-10)" xlink:href="#path-9"></use>
-                <use fill="url(#linearGradient-8)" fill-rule="evenodd" xlink:href="#path-9"></use>
-              </g>
-              <g id="border">
-                <g id="center">
-                  <use fill="url(#linearGradient-11)" xlink:href="#path-12"></use>
-                  <use fill-opacity="0.5" fill="#F3F4F6" xlink:href="#path-12"></use>
-                </g>
-                <rect id="left" fill="#FDFDFD" x="0" y="0" width="225.623529" height="3.03030303"></rect>
-                <rect id="right" fill="#FDFDFD" x="332.870588" y="0" width="225.623529" height="3.03030303"></rect>
-              </g>
+          </g>
+        </mask>
+      <% end %>
+    </defs>
+    <g id="77173500-bfe4-412c-9f4c-6d18bf82908b" data-name="Artboard">
+      <g id="98dd64aa-035e-4372-81a9-808b5df3da43" data-name="macbook">
+        <g id="2528bcce-59cd-406f-8223-417b9dc2b419" data-name="bg">
+          <g filter="url(#e71a6e13-91a7-4c48-8db4-fd9f3d7680f9)">
+            <path id="a7e121fd-8fcd-4e60-8f74-4eb6bbc3617a" data-name="path-1" d="M296.42,91H1850.58c34,0,43.53,0,58.17,4.92a62.76,62.76,0,0,1,37.33,37.33c4.92,14.64,4.92,24.17,4.92,58.17V1223.58c0,34,0,43.53-4.92,58.17a62.76,62.76,0,0,1-37.33,37.33c-14.64,4.92-24.17,4.92-58.17,4.92H296.42c-34,0-43.53,0-58.17-4.92a62.76,62.76,0,0,1-37.33-37.33c-4.92-14.64-4.92-24.17-4.92-58.17V191.42c0-34,0-43.53,4.92-58.17a62.76,62.76,0,0,1,37.33-37.33C252.89,91,262.43,91,296.42,91Z" transform="translate(0 -91)"/>
+          </g>
+          <path id="400dfe13-b733-4999-ba8f-7c75bc5675e2" data-name="path-1" d="M296.42,91H1850.58c34,0,43.53,0,58.17,4.92a62.76,62.76,0,0,1,37.33,37.33c4.92,14.64,4.92,24.17,4.92,58.17V1223.58c0,34,0,43.53-4.92,58.17a62.76,62.76,0,0,1-37.33,37.33c-14.64,4.92-24.17,4.92-58.17,4.92H296.42c-34,0-43.53,0-58.17-4.92a62.76,62.76,0,0,1-37.33-37.33c-4.92-14.64-4.92-24.17-4.92-58.17V191.42c0-34,0-43.53,4.92-58.17a62.76,62.76,0,0,1,37.33-37.33C252.89,91,262.43,91,296.42,91Z" transform="translate(0 -91)" fill="#fff"/>
+        </g>
+        <path id="43c6a4ac-5af9-45b1-9c0a-e2b805fceea4" data-name="cam" d="M1070.5,133a6.5,6.5,0,1,1-6.5,6.5A6.5,6.5,0,0,1,1070.5,133Z" transform="translate(0 -91)" fill="#f2f2f2"/>
+        <g id="41b53099-7741-4f93-a5b1-bbc7d688aeca" data-name="Bottom">
+          <g id="ed61ea5b-396c-4755-acc5-837900bb45dd" data-name="Rectangle-1">
+            <polygon id="3f88510c-3940-406a-944f-ea423fac19a9" data-name="path-4" points="0 1192 2148 1192 2148 1204 0 1204 0 1192" fill="#fff"/>
+            <polygon id="12bddb6b-cf6b-4005-b437-57bd064462a3" data-name="path-4" points="0 1192 2148 1192 2148 1204 0 1204 0 1192" fill="url(#952164c2-8d50-4072-8fbc-1daf64a9f996)"/>
+            <g filter="url(#cb01145d-084b-4051-a7b8-afc1075b337d)">
+              <polygon id="04c57957-d6c4-492a-af0d-9db3629d7056" data-name="path-4" points="0 1192 2148 1192 2148 1204 0 1204 0 1192"/>
+            </g>
+          </g>
+          <polygon id="9b3aec7b-87aa-41a2-8c6e-1a1021f35e95" data-name="gradient" points="2068 1192 2148 1192 2148 1204 2068 1204 2068 1192" opacity="0.1" fill="url(#45e2d6df-7e0f-4299-baf8-38080dc72e3c)" style="isolation: isolate"/>
+          <polygon id="2b964d54-6675-4afb-a411-aa203a5eaca1" data-name="gradient" points="0 1192 80 1192 80 1204 0 1204 0 1192" opacity="0.1" fill="url(#d6b5fdf2-09db-48a0-a136-a0968d72d8fd)" style="isolation: isolate"/>
+          <g id="0f4064a7-9754-48ad-8901-2956fe4271fa" data-name="bottom">
+            <path id="6dfeff10-a16b-4114-9289-11ca4696184e" data-name="path-11" d="M0,1295H2148c-12.69,7.93-125.29,40.45-500,32-33.09,0-965.67-1-1170-1-237.14,0-335.31,1-424.91-16.31C21.72,1303.64,6,1298.65,0,1295Z" transform="translate(0 -91)" fill="#fff"/>
+            <path id="6ac336ae-89f9-44e0-8892-088e108b9b0c" data-name="path-11" d="M0,1295H2148c-12.69,7.93-125.29,40.45-500,32-33.09,0-965.67-1-1170-1-237.14,0-335.31,1-424.91-16.31C21.72,1303.64,6,1298.65,0,1295Z" transform="translate(0 -91)" fill="url(#ff74df12-f810-4f37-96f0-568d0d222681)"/>
+            <path id="929a00e3-5dc1-434b-9ea2-499bfffeb4b7" data-name="path-11" d="M0,1295H2148c-12.69,7.93-125.29,40.45-500,32-33.09,0-965.67-1-1170-1-237.14,0-335.31,1-424.91-16.31C21.72,1303.64,6,1298.65,0,1295Z" transform="translate(0 -91)" fill="url(#ff74df12-f810-4f37-96f0-568d0d222681)"/>
+            <path id="41d1f204-371f-4006-b6e3-3ca8e55170a4" data-name="path-11" d="M0,1295H2148c-12.69,7.93-125.29,40.45-500,32-33.09,0-965.67-1-1170-1-237.14,0-335.31,1-424.91-16.31C21.72,1303.64,6,1298.65,0,1295Z" transform="translate(0 -91)" fill="url(#1b131c43-0dea-4a3e-b634-4bb33e458dcc)"/>
+            <path id="3661128a-dd7f-4831-ad61-767d60316664" data-name="path-11" d="M0,1295H2148c-12.69,7.93-125.29,40.45-500,32-33.09,0-965.67-1-1170-1-237.14,0-335.31,1-424.91-16.31C21.72,1303.64,6,1298.65,0,1295Z" transform="translate(0 -91)" fill="url(#dc83dd5d-fe7a-4f3c-96dc-f9b3dd530f96)"/>
+          </g>
+          <g id="be6e6ca0-ae80-4cfd-951c-f15752bfa1f4" data-name="Combined-shape-29">
+            <path id="0381728f-4162-474f-a8a6-a34825b87739" data-name="path-12" d="M908,1283h371v11c0,4.22-40,5-40,5H908s-40-.78-40-5v-11Z" transform="translate(0 -91)" fill="#fff"/>
+            <g filter="url(#55d6f982-cfb0-43d5-b1ce-33840dcf898f)">
+              <path id="a04f8c46-600e-4f3d-a0d0-18aec2a64794" data-name="path-12" d="M908,1283h371v11c0,4.22-40,5-40,5H908s-40-.78-40-5v-11Z" transform="translate(0 -91)"/>
+            </g>
+          </g>
+          <path id="45b417de-e8a7-48cf-9a51-a395e9f84f91" data-name="gradient" d="M868,1283h40v16s-40-.78-40-5Z" transform="translate(0 -91)" opacity="0.07" fill="url(#0347f2e9-aa93-4a31-83dd-17fa4a18e4ef)" style="isolation: isolate"/>
+          <path id="c82d931c-b5dd-41df-8d28-8b31c0ddfc08" data-name="gradient" d="M1279,1283h-40v16s40-.78,40-5Z" transform="translate(0 -91)" opacity="0.07" fill="url(#48a5c464-8edd-45c4-9ce5-a29ab784ca76)" style="isolation: isolate"/>
+        </g>
+        <g id="868adc6d-b9e8-4932-87a6-1078d21ee680" data-name="~SCREEN-HERE~">
+          <g id="c080d29c-08b9-42d3-99f9-b333604f0ed7" data-name="Rectangle">
+            <rect id="61fb43be-48cd-4ec6-b11b-6f8c5a6f0202" data-name="path-15" x="264" y="79" width="1618" height="1010" fill="#d8d8d8"/>
+          </g>
+          <g <%= "mask=url(#e5f414aa-2dc3-4e7e-beb9-c2665256ed3c)" if mask %>>
+            <g>
+              <image width="1618" height="1010" transform="translate(264 79)" xlink:href="<%= project_image_url(project, image) %>" style="isolation: isolate; height: auto;"/>
+              <rect id="aef89c73-ce68-4e7f-aa2a-40ef1cca19a7" data-name="rect-17" x="264" y="79" width="1618" height="1010" fill-opacity="0"/>
             </g>
           </g>
         </g>
@@ -115,3 +100,13 @@
     </g>
   </svg>
 </div>
+
+
+
+
+<!-- <% if mask %>
+  <mask id="mask-5" fill="white">
+    <use xlink:href="#path-4"></use>
+  </mask>
+  <use id="Mask" fill="#ECEDF0" xlink:href="#path-4"></use>
+<% end %> -->
