--- a/source/templates/partials/_main.html.erb
+++ b/source/templates/partials/_main.html.erb
@@ -7,7 +7,7 @@
     </span>
     <span>
       <em><%= t('project.main.production') %></em>
-      <%= project[locale.to_s].work %>
+      <%= project[locale.to_s].work %><br>
       <%= project[locale.to_s].main.production.downcase %>
     </span>
     <span>
