--- a/source/stylesheets/misc/_vars.scss
+++ b/source/stylesheets/misc/_vars.scss
@@ -2,6 +2,7 @@ $color-primary: #C1EDF5;
 $color-secondary: #EA4C64;
 $color-background: #FFF;
 $grey: #6B6B6B;
+$white: #FFF;
 
 $font-primary: 'Menlo', 'Helvetica Neue', 'Helvetica', sans-serif;
 
