--- a/source/stylesheets/project/_main.scss
+++ b/source/stylesheets/project/_main.scss
@@ -1,6 +1,29 @@
-.computer {
-  svg image {
-    x: 0;
-    y: 0;
+.main {
+  width: 65%;
+  margin: 3em auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .computer {
+    width: 55%;
+    svg {
+      width: 100%;
+    }
+  }
+  .details {
+    font-size: .813em;
+    span {
+      display: block;
+      margin-top: 3.125em;
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+    em {
+      display: block;
+      font-style: italic;
+      font-weight: bold;
+      margin-bottom: .75em;
+    }
   }
 }
