--- a/source/stylesheets/project/_description.scss
+++ b/source/stylesheets/project/_description.scss
@@ -27,7 +27,7 @@
       padding: 1px;
       background-color: $white;
       transform: translateX(-101%);
-      transition: transform .2s ease-in-out;
+      transition: transform 0.6s ease-in-out;
     }
     &:hover::after {
       z-index: 20;
