--- a/source/stylesheets/project/_title.scss
+++ b/source/stylesheets/project/_title.scss
@@ -10,6 +10,7 @@
     left: 50%;
     transform: translateX(-50%);
     text-transform: uppercase;
+    white-space: nowrap;
   }
   .logo {
     margin-left: 20%;
