--- a/source/templates/partials/_main.html.erb
+++ b/source/templates/partials/_main.html.erb
@@ -1,5 +1,5 @@
 <div class="main">
-  <%= partial 'partials/computer', locals: {mask: true, image: project.main} %>
+  <%= partial 'partials/computer', locals: {large: false, image: project.main} %>
   <div class="details">
     <span>
       <em><%= t('project.main.customer') %></em>
