--- a/source/templates/partials/_mockups.html.erb
+++ b/source/templates/partials/_mockups.html.erb
@@ -1,5 +1,5 @@
 <div class="mockups">
-  <%= partial 'partials/computer', locals: {mask: false, image: (project.mockups.computer || project.main)} %>
+  <%= partial 'partials/computer', locals: {large: true, image: (project.mockups.computer || project.main)} %>
   <div class="iphones">
     <% project.mockups.iphone.each_with_index do |image, i| %>
       <%= partial 'partials/iphone', locals: {id: i, image: image} %>
