--- a/source/templates/partials/_computer.html.erb
+++ b/source/templates/partials/_computer.html.erb
@@ -1,5 +1,5 @@
 <div class="computer">
-  <svg id="adf1338b-c638-44c9-9dd0-93df7f9f46b1" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2148 1237.39">
+  <svg id="adf1338b-c638-44c9-9dd0-93df7f9f46b1" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" <%= large ? "viewBox='0 0 2148 3231'" : "viewBox='0 0 2148 1237.39'" %>>
     <defs>
       <filter id="e71a6e13-91a7-4c48-8db4-fd9f3d7680f9" x="-13.7" y="-110.5" width="128.3" height="140.2" name="filter-2">
         <feOffset result="shadowOffsetOuter1" dx="7.8" dy="7.8" in="SourceAlpha"/>
@@ -40,15 +40,13 @@
       </filter>
       <linearGradient id="0347f2e9-aa93-4a31-83dd-17fa4a18e4ef" data-name="Dégradé sans nom 8" x1="734.18" y1="984.18" x2="735.18" y2="984.18" gradientTransform="matrix(40, 0, 0, -16, -28499.14, 17037.76)" xlink:href="#45e2d6df-7e0f-4299-baf8-38080dc72e3c"/>
       <linearGradient id="48a5c464-8edd-45c4-9ce5-a29ab784ca76" data-name="Dégradé sans nom 9" x1="735.17" y1="984.18" x2="734.17" y2="984.18" gradientTransform="matrix(40, 0, 0, -16, -28127.82, 17037.76)" xlink:href="#45e2d6df-7e0f-4299-baf8-38080dc72e3c"/>
-      <% if mask %>
-        <mask id="e5f414aa-2dc3-4e7e-beb9-c2665256ed3c" x="264" y="79" width="1618" height="1010" maskUnits="userSpaceOnUse">
-          <g transform="translate(0 -91)">
-            <g id="5c9c027a-7ae5-4592-a798-6d4ba66f4659" data-name="mask-16">
-              <rect id="b88cc6a8-61b0-4014-b1dc-ffc15d65cac1" data-name="path-15" x="264" y="170" width="1618" height="1010" fill="#fff"/>
-            </g>
+      <mask id="e5f414aa-2dc3-4e7e-beb9-c2665256ed3c<%= '-large' if large %>" x="264" y="79" width="1618" <%= large ? "height='3250'" : "height='1010'" %> maskUnits="userSpaceOnUse">
+        <g transform="translate(0 -91)">
+          <g id="5c9c027a-7ae5-4592-a798-6d4ba66f4659" data-name="mask-16">
+            <rect id="b88cc6a8-61b0-4014-b1dc-ffc15d65cac1" data-name="path-15" x="264" y="170" width="1618" <%= large ? "height='3250'" : "height='1010'" %> fill="#fff"/>
           </g>
-        </mask>
-      <% end %>
+        </g>
+      </mask>
     </defs>
     <g id="77173500-bfe4-412c-9f4c-6d18bf82908b" data-name="Artboard">
       <g id="98dd64aa-035e-4372-81a9-808b5df3da43" data-name="macbook">
@@ -89,10 +87,9 @@
           <g id="c080d29c-08b9-42d3-99f9-b333604f0ed7" data-name="Rectangle">
             <rect id="61fb43be-48cd-4ec6-b11b-6f8c5a6f0202" data-name="path-15" x="264" y="79" width="1618" height="1010" fill="#d8d8d8"/>
           </g>
-          <g <%= "mask=url(#e5f414aa-2dc3-4e7e-beb9-c2665256ed3c)" if mask %>>
+          <g mask=url(#e5f414aa-2dc3-4e7e-beb9-c2665256ed3c<%= '-large' if large %>)>
             <g>
               <image width="1618" height="1010" transform="translate(264 79)" xlink:href="<%= project_image_url(project, image) %>" style="isolation: isolate; height: auto;"/>
-              <rect id="aef89c73-ce68-4e7f-aa2a-40ef1cca19a7" data-name="rect-17" x="264" y="79" width="1618" height="1010" fill-opacity="0"/>
             </g>
           </g>
         </g>
