--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,8 +32,7 @@
   </head>
   <body>
     <%= partial 'layouts/partials/header' %>
-    <section id="<%= current_page.data.dynamic == nil ? current_page.data.slug : current_page.data.dynamic.data %>"
-      <%= "data-border-color=#{current_page.data.borderColor}" if current_page.data.borderColor != nil %>>
+    <section id="<%= current_page.data.dynamic == nil ? current_page.data.slug : current_page.data.dynamic.data %>">
       <%= yield %>
     </section>
     <!-- <%= partial 'layouts/partials/footer' %> -->
