--- a/source/stylesheets/misc/_border.scss
+++ b/source/stylesheets/misc/_border.scss
@@ -1,11 +1,32 @@
-#border {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  box-shadow: inset 0px 0px 0px 17.5px #C1EDF5;
-  transition: box-shadow .4s;
-  // Box shadow is managed in JS
+#borders {
+  .border {
+    position: fixed;
+    z-index: 999;
+    transition: background-color .4s;
+    background-color: $color-primary;
+  }
+  .left,
+  .right {
+    top: 0;
+    bottom: 0;
+    width: 17.5px;
+  }
+  .top,
+  .bottom {
+    left: 0;
+    height: 17.5px;
+    width: 100%;
+  }
+  .left {
+    left: 0;
+  }
+  .right {
+    right: 0;
+  }
+  .top {
+    top: 0;
+  }
+  .bottom {
+    bottom: 0;
+  }
 }
