--- a/source/stylesheets/project/_main.scss
+++ b/source/stylesheets/project/_main.scss
@@ -4,11 +4,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media #{$classicTablet} {
+    display: block;
+  }
   .computer {
     width: 55%;
     svg {
       width: 100%;
       padding-top: 25px;
+    }
+    @media #{$classicTablet} {
+      width: 80%;
+      margin: 0 auto 2em;
+    }
+    @media #{$bigPhone} {
+      width: 90%;
     }
   }
   .details {
@@ -19,12 +29,25 @@
       &:first-child {
         margin-top: 0;
       }
+      @media #{$classicTablet} {
+        margin-top: 0;
+        margin-bottom: 2em;
+        width: 50%;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
     }
     em {
       display: block;
       font-style: italic;
       font-weight: bold;
       margin-bottom: .75em;
+    }
+    @media #{$classicTablet} {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
     }
   }
 }
