--- a/source/stylesheets/project/_mockups.scss
+++ b/source/stylesheets/project/_mockups.scss
@@ -12,6 +12,9 @@
       height: auto;
       padding-top: 25px;
     }
+    @media #{$bigPhone} {
+      width: 100%;
+    }
   }
   .iphones {
     margin-top: 4em;
@@ -28,13 +31,23 @@
       &:nth-child(2n) {
         text-align: right;
       }
+      svg {
+        width: 43%;
+        filter: drop-shadow(0px 10px 30px rgba(52, 63, 75, .1));
+        image {
+          height: auto;
+        }
+        @media #{$bigPhone} {
+          width: 40%;
+        }
+      }
+    }
+    @media #{$bigPhone} {
+      width: 100%;
+      margin-top: 1em;
     }
   }
-  .iphone svg {
-    width: 43%;
-    filter: drop-shadow(0px 10px 30px rgba(52, 63, 75, .1));
-    image {
-      height: auto;
-    }
+  @media #{$bigPhone} {
+    display: block;
   }
 }
