--- a/source/templates/project.html.erb
+++ b/source/templates/project.html.erb
@@ -9,12 +9,19 @@ dynamic:
 dir:
   - projects
 ---
-<div class="block" style="border-bottom-color: <%= project.color %>">
+<div id="basic-container" class="block" style="border-bottom-color: <%= project.color %>">
   <%= partial 'partials/title' %>
   <%= partial 'partials/main' %>
   <%= partial 'partials/description' %>
   <%= partial 'partials/mockups' %>
 </div>
-<div class="block" style="border-bottom-color: <%= project.color %>">
-  <%= partial 'partials/sitemap' %>
-</div>
+<% if project.medium %>
+  <div id="medium-container" class="block" style="border-bottom-color: <%= project.color %>">
+    <%= partial 'partials/medium' %>
+  </div>
+<% end %>
+<% if project.sitemap %>
+  <div id="sitemap-container" class="block" style="border-bottom-color: <%= project.color %>">
+    <%= partial 'partials/sitemap' %>
+  </div>
+<% end %>
